<resources>
    <string name="app_name">Heart Beat</string>
    <string name="loading_message">Please wait…</string>
    <string name="zero">0</string>
    <string name="five">5</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="camera_permission_needed">Needs to access the device camera for scanning your finger to measure your heart beat. Please allow the permission to get the service.</string>
    <string name="place_finger_on_the_camera">Please place your finger behind the Camera</string>
    <string name="permission_request">Permission Request</string>
    <string name="inhale_slowly_for_five_seconds">Inhale slowly for 5 seconds</string>
</resources>
