<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeartBeatActivity">

    <include
        android:id="@+id/toolbarHeartBeat"
        layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/wrapperHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarHeartBeat"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/wrapperBreathImageHome"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:src="@drawable/breath_in"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

                    <View
                        android:id="@+id/viewBreathInIVSelectHome"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_alignParentBottom="true"
                        android:visibility="gone"/>

                    <View
                        android:id="@+id/viewGrayBreathInHome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorTransparentWhite"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="150dp"
                        android:src="@drawable/breath_out"
                        android:scaleType="fitXY"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        tools:ignore="ContentDescription" />

                    <View
                        android:id="@+id/viewBreathOutIVSelectHome"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_alignParentBottom="true"
                        android:visibility="gone"/>

                    <View
                        android:id="@+id/viewGrayBreathOutHome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorTransparentWhite"/>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/wrapperProgressBarHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_alignParentStart="true" />

                <ProgressBar
                    android:id="@+id/progressBarHome"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="5"
                    tools:progress="1"
                    android:layout_centerInParent="true"
                    style="?android:progressBarStyleHorizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/five"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/tvProgressMessageHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/place_finger_on_the_camera"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/activity_half_margin"/>

            <SurfaceView
                android:id="@+id/surfaceCameraHome"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/activity_half_margin"/>

            <LinearLayout
                android:id="@+id/wrapperLineChartHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="@drawable/bg_black_squre"
                android:layout_marginBottom="@dimen/activity_half_margin">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChartBreathHome"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="3"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivHeartBreathHome"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/heart_icon"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tvHeartBreathHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="30sp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>